<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccion"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="22dp"

            />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/operacion"
            android:checkedButton="@+id/suma"
            >
            <RadioButton
                android:id="@+id/suma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bSuma"

                 />
            <RadioButton
                android:id="@+id/resta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bResta"

                android:checked="false" />
            <RadioButton
                android:id="@+id/multiplicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bMultiplicacion"
                />
            <RadioButton
                android:id="@+id/division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bDivision"
                />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.38"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/operando1"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/operador1"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/operando2"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/operador2"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.74"
        android:orientation="vertical"

        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bCalcular"
            android:id="@+id/bCalcular"
            android:layout_gravity="right"
            android:onClick="operar"


            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/tResultado"
            />

    </LinearLayout>
</LinearLayout>
